fix(build): remediate GHSA-g9mf-h72j-4rw9 undici vulnerability (#188)
# Pull Request

## Description

Remediate security vulnerability GHSA-g9mf-h72j-4rw9 (CVE-2026-22036) in
the `undici` npm package by adding an npm override to force version
7.18.2.

**Vulnerability Details:**
| Attribute | Value |
|-----------|-------|
| CVE | CVE-2026-22036 |
| GHSA | GHSA-g9mf-h72j-4rw9 |
| Severity | Low (CVSS 3.7/10) |
| CWE | CWE-770 (Allocation of Resources Without Limits) |

**Dependency Chain:**
```
markdown-link-check@3.14.2 → cheerio@1.1.2 → undici@7.16.0 (vulnerable)
```

## Related Issue(s)

Fixes #187

## Type of Change

Select all that apply:

**Code & Documentation:**

- [x] Bug fix (non-breaking change fixing an issue)
- [ ] New feature (non-breaking change adding functionality)
- [ ] Breaking change (fix or feature causing existing functionality to
change)
- [ ] Documentation update

**Infrastructure & Configuration:**

- [ ] GitHub Actions workflow
- [ ] Linting configuration (markdown, PowerShell, etc.)
- [ ] Security configuration
- [ ] DevContainer configuration
- [x] Dependency update

**AI Artifacts:**

- [ ] Reviewed contribution with `prompt-builder` chatmode and addressed
all feedback
- [ ] Copilot instructions (`.github/instructions/*.instructions.md`)
- [ ] Copilot prompt (`.github/prompts/*.prompt.md`)
- [ ] Copilot chatmode (`.github/chatmodes/*.chatmode.md`)

**Other:**

- [ ] Script/automation (`.ps1`, `.sh`, `.py`)
- [ ] Other (please describe):

## Testing

Verified remediation with the following commands:

```powershell
# Confirm undici version is patched
npm ls undici
# Output: undici@7.18.2 overridden

# Confirm no vulnerabilities
npm audit
# Output: found 0 vulnerabilities
```

## Checklist

### Required Checks

- [x] Documentation is updated (if applicable)
- [x] Files follow existing naming conventions
- [x] Changes are backwards compatible (if applicable)

### Required Automated Checks

The following validation commands must pass before mer

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "markdown-table-formatter": "^1.7.0",
     "markdownlint-cli2": "^0.20.0"
   },
+  "overrides": {
+    "undici": "7.18.2"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/hve-core.git"
