test(scripts): add Pester tests for linting scripts (#237)
# Pull Request

## Description

Add comprehensive Pester tests for four linting PowerShell scripts. This
PR provides complete test coverage for the linting infrastructure and
fixes a discovered bug in `Link-Lang-Check.ps1`.

### Changes

- **New test files** (4 files, 1,156 lines total):
- `Invoke-LinkLanguageCheck.Tests.ps1` - Tests for link/language
validation orchestration
- `Invoke-PSScriptAnalyzer.Tests.ps1` - Tests for PowerShell static
analysis wrapper
- `Link-Lang-Check.Tests.ps1` - Tests for link language checking with
npx integration
- `Markdown-Link-Check.Tests.ps1` - Tests for markdown link validation
with npx integration

- **Test fixtures** (5 files):
  - `anchors-test.md` - Internal anchor link scenarios
  - `invalid-links.md` - Broken URL test cases
  - `link-check-config.json` - Configuration fixture
  - `mixed-links.md` - Combined valid/invalid link scenarios
  - `valid-links.md` - Working URL test cases

- **Bug fix**:
- `Link-Lang-Check.ps1` - Fixed array wrapping on `Get-Content` to
handle single-file edge case

- **Test organization**:
- Reorganized test directory structure to mirror source layout
(`scripts/tests/linting/`, `scripts/tests/dev-tools/`,
`scripts/tests/extension/`, `scripts/tests/lib/`)

### Test Results

- **192 tests passing** (Pester 5.7.1)
- **PSScriptAnalyzer clean** (no warnings)

## Related Issue(s)

Closes #231
Closes #190 

## Type of Change

Select all that apply:

**Code & Documentation:**

- [x] Bug fix (non-breaking change fixing an issue)
- [ ] New feature (non-breaking change adding functionality)
- [ ] Breaking change (fix or feature causing existing functionality to
change)
- [ ] Documentation update

**Infrastructure & Configuration:**

- [ ] GitHub Actions workflow
- [ ] Linting configuration (markdown, PowerShell, etc.)
- [ ] Security configuration
- [ ] DevContainer configuration
- [ ] Dependency update

**AI Artifacts:**

- [ ] Reviewed contribution w

--- a/.github/workflows/link-lang-check.yml
+++ b/.github/workflows/link-lang-check.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run Link Language Check
         shell: pwsh
         run: |
-          & scripts/linting/Invoke-LinkLanguageCheck.ps1
+          & scripts/linting/Invoke-LinkLanguageCheck.ps1 -ExcludePaths 'scripts/tests/**'
         continue-on-error: true
 
       - name: Upload results
