fix(workflows): add manual tag creation for draft releases until release-please-action updates (#538)
# fix(workflows): add draft release with manual tag bridge + markdown-it
ReDoS patch

## Description

### Draft Release with Manual Tag Bridge

GitHub does not create git tags for draft releases, but `release-please`
needs the tag to anchor version calculations for subsequent release PRs.
Without it, `release-please` scans the full commit history, may find an
old breaking change, and proposes a wrong major bump (evidenced by bogus
v3.0.0 PRs #530, #532, #534, #539).

The `release-please-action` v4.4.0 bundles `release-please` v17.1.3,
which does not support `force-tag-creation` (introduced in v17.2.0).
This PR adds a temporary bridge step that creates the tag via the GitHub
API immediately after a draft release is created.

**Changes:**

- Set `draft: true` in `release-please-config.json` so releases are
mutable (fixes HTTP 422 on asset upload)
- Add manual tag creation step to `.github/workflows/main.yml` using `gh
api` to push a lightweight tag
- Add robust error handling: detects duplicate tags specifically, fails
on other errors
- Add `contents: write` permission for the tag creation API call

**Remove the manual tag-creation step once `release-please-action` ships
with `release-please >= 17.2.0` and supports `force-tag-creation`
natively.** See: https://github.com/googleapis/release-please/pull/2423

### markdown-it ReDoS Remediation (GHSA-38c4-r59v-3vqw)

`markdownlint-cli2@0.20.0` depends on `markdown-it@14.1.0`, which has a
moderate ReDoS vulnerability (CVE-2026-2327) in the linkify regex. No
upstream fix is available yet.

**Changes:**

- Add `markdown-it: 14.1.1` to `overrides` in `package.json` (follows
existing `undici` override pattern)
- Patch-level bump with a single regex fix — no API surface changes

**Validation:** `npm audit` reports 0 vulnerabilities, `npm run lint:md`
passes with 0 errors on all 153 files.

## Related Issue(s)

- Upstream tag cr

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "markdownlint-cli2": "^0.20.0"
   },
   "overrides": {
+    "markdown-it": "14.1.1",
     "undici": "7.18.2"
   },
   "repository": {
