--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,7 @@ jobs:
       minor: ${{ steps.release.outputs.minor }}
       patch: ${{ steps.release.outputs.patch }}
     permissions:
-      contents: read
+      contents: write
     steps:
       - name: Generate GitHub App Token
         id: app-token
@@ -95,6 +95,34 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
+
+      # Bridge: GitHub does not create git tags for draft releases, but
+      # release-please needs the tag to anchor version calculations for
+      # subsequent release PRs. Without it, release-please scans the full
+      # commit history, may find an old breaking change, and proposes a
+      # wrong major bump. The force-tag-creation config option (release-please
+      # v17.2.0+) would handle this natively, but v4.4.0 of the action
+      # bundles v17.1.3. Remove this step once the action upgrades past
+      # v17.2.0. See: https://github.com/googleapis/release-please/pull/2423
+      - name: Create git tag for draft release
+        if: ${{ steps.release.outputs.release_created == 'true' }}
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: |
+          TAG="${{ steps.release.outputs.tag_name }}"
+          echo "Creating tag $TAG at ${{ github.sha }}"
+          if ! OUTPUT=$(gh api "repos/${{ github.repository }}/git/refs" \
+            --method POST \
+            -f ref="refs/tags/$TAG" \
+            -f sha="${{ github.sha }}" 2>&1); then
+            if echo "$OUTPUT" | grep -qi "Reference already exists"; then
+              echo "::warning::Tag $TAG already exists, skipping"
+            else
+              echo "::error::Failed to create tag $TAG"
+              echo "$OUTPUT" >&2
+              exit 1
+            fi
+          fi
 
   extension-package-release:
     name: Package VS Code Extensions (Release)
