--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "draft": true,
   "release-search-depth": 800,
   "commit-search-depth": 1000,
   "force-tag-creation": true,
